--- a/WebCycle/Properties/launchSettings.json
+++ b/WebCycle/Properties/launchSettings.json
@@ -9,23 +9,34 @@
     }
   },
   "profiles": {
-    "WebCycle": {
+    "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7122;http://localhost:5067",
+      "launchUrl": "api/event",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+    //"profiles2": {
+    //  "WebCycle": {
+    //    "commandName": "Project",
+    //    "dotnetRunMessages": true,
+    //    "launchBrowser": true,
+    //    "launchUrl": "swagger",
+    //    "applicationUrl": "https://localhost:7122;http://localhost:5067",
+    //    "environmentVariables": {
+    //      "ASPNETCORE_ENVIRONMENT": "Development"
+    //    }
+    //  },
+      "IIS Express": {
+        "commandName": "IISExpress",
+        "launchBrowser": true,
+        "launchUrl": "swagger",
+        "environmentVariables": {
+          "ASPNETCORE_ENVIRONMENT": "Development"
+        }
       }
     }
   }
-}
