wip using the app

--- a/WebCycleApp/WebCycleApp.csproj
+++ b/WebCycleApp/WebCycleApp.csproj
@@ -58,4 +58,6 @@
 	  </MauiXaml>
 	</ItemGroup>
 
+	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadDebuggerTimeoutExceptionWebCycleAppHideInfoBar="True" /></VisualStudio></ProjectExtensions>
+
 </Project>
