--- a/WebCycleManager/WebCycleManager.csproj
+++ b/WebCycleManager/WebCycleManager.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Results\test.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.7">
       <PrivateAssets>all</PrivateAssets>
@@ -18,6 +22,18 @@
   <ItemGroup>
     <ProjectReference Include="..\DataAccessEF\DataAccessEF.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Results\test.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Results\test.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Points\test.cshtml" />
   </ItemGroup>
 
 </Project>
