--- a/DataAccessEF/DataAccessEF.csproj
+++ b/DataAccessEF/DataAccessEF.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Domain\CycleManager.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
