--- a/WebCycle/WebCycleApi.csproj
+++ b/WebCycle/WebCycleApi.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataAccessEF\DataAccessEF.csproj" />
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Domain\CycleManager.Domain.csproj" />
   </ItemGroup>
 
 </Project>
